pxc/tests/fixme_179_inh_struct/inhst3.px
public namespace inhst3;
import common -;

interface i0 {
  function void m0();
}

struct s1 {
}

struct s2 <s1> { // error
}

{
}
